--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script src="{% static 'js/function.js' %}"></script>
 
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
     {% block style %}
     
     {% endblock style %}
